Fix some font sizing for readability.

--- a/assets/style_built.scss
+++ b/assets/style_built.scss
@@ -58,7 +58,6 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-smooth:always;
 	font-size: 13px;
-	line-height: 15px;
 	color: #fff;
 	min-width: 1130px;
 }
@@ -345,7 +344,7 @@ h1, h4 {
 	width: 590px;
 	background: #3976B1;
 	padding: 0 55px 30px 55px;
-	font-size: 12px;
+	font-size: 12pt;
 }
 .text .postInner img {
 	width: auto;
